# Ice-metal

./: README.md
BARE BONES/: A Freestanding Rust Binary.md  A Minimal Rust Kernel.md  VGA Test Mode.md
ice-metal/: Cargo.toml
ice-metal/.cargo/: config.toml
ice-metal/src/: main.rs  vga_buffer.rs
review/: A Freestanding Rust Binary.md  A Minimal Rust Kernel.md
