[package]
name = "crate_name"
version = "0.1.0"
authors = ["deep-overflow 2020320120@korea.ac.kr"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic